syntax = "proto3";

package penasim;

import "google/protobuf/descriptor.proto";

message TableOptions {
  string table_name = 1;
}

message FieldOptions {
  bool is_primary_key = 1;
  bool is_index = 2;
}

message ForeignKey {
  string parent_table = 1;
  string parent = 2;
  string child = 3;
}

extend google.protobuf.MessageOptions {
  optional TableOptions table_options = 50000 [targets = TARGET_TYPE_MESSAGE];
}

extend google.protobuf.FieldOptions {
  optional FieldOptions field_options = 50001 [targets = TARGET_TYPE_FIELD];
}